src/tests/snapshots/cargo_vet__tests__vet__builtin-only-first-deps.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Succeeded (because you have no third-party dependencies)

