src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-audit-as-default-root-no-audit.snap
---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

1 unvetted dependencies:
  root-package:10.0.0 missing ["safe-to-deploy"]

recommended audits for safe-to-deploy:
    Command                                Publisher  Used By  Audit Size
    cargo vet inspect root-package 10.0.0  UNKNOWN             100 lines

estimated audit backlog: 100 lines

Use |cargo vet certify| to record the audits.

