src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-audit-as-default-root.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Succeeded (1 fully audited, 3 unaudited)

