src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-audit-as-weaker-root.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Succeeded (1 fully audited, 3 unaudited)
  warning: some dependencies are listed in unaudited, but didn't need it:
    root-package:10.0.0

