src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-delta-broken-double-cycle.snap
---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["safe-to-deploy"]

recommended audits for safe-to-deploy:
    Command                                  Publisher  Used By      Audit Size
    cargo vet diff third-party1 4.0.0 5.0.0  UNKNOWN    first-party  1 files changed, 9 insertions(+)

estimated audit backlog: 9 lines

Use |cargo vet certify| to record the audits.

