src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-deps-init.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "success",
  "vetted_fully": [],
  "vetted_partially": [],
  "vetted_with_exemptions": [
    {
      "name": "build",
      "version": "10.0.0"
    },
    {
      "name": "build-proc-macro",
      "version": "10.0.0"
    },
    {
      "name": "normal",
      "version": "10.0.0"
    },
    {
      "name": "proc-macro",
      "version": "10.0.0"
    },
    {
      "name": "dev",
      "version": "10.0.0"
    },
    {
      "name": "dev-proc-macro",
      "version": "10.0.0"
    }
  ]
}
